--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,1 +1,63 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #efeaee;
+  color: #212121;
+  line-height: 1.5;
+  margin: 0;
+}
+p {
+  margin: 0;
+}
+a {
+  display: block;
+}
+ul {
+  list-style: none;
+}
+img {
+  display: block;
+  max-width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.header {
+  width: 100vw;
+  margin: 0;
+  margin-bottom: 12px;
+  background-color: rgb(181, 105, 196);
+}
+
+.fixed {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  left: 0;
+  z-index: 20;
+}
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+// .gallery {
+//   display: grid;
+//   max-width: 1140px;
+//   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+//   grid-auto-rows: 240px;
+//   grid-gap: 12px;
+//   grid-row: 12px;
+//   justify-content: center;
+//   margin-left: auto;
+//   margin-right: auto;
+// }
